@@ -1,3 +1,9 @@
+2012-07-28  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* tests/clock.test:    [Bug 3549770] Multiple test failures running tcltest
+	* tests/registry.test: outside build tree
+	* tests/winDde.test:
+
 2012-07-27  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tclUniData.c:   Support Unicode 6.2 (Add Turkish lira sign)
